<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_security_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/chat_background"
        tools:context=".ui.security.SecurityActivity">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/app_toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/activity_security_scroll"
            style="@style/ScrollStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_security_scroll_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_30">

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="@dimen/width_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_30"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:text="@string/please_set_up_an_8_digit_pin_for_your_account_security"
                    android:textColor="@color/message_text_color"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.w3engineers.unicef.util.lib.boxpassword.BoxPassword
                    android:id="@+id/edit_text_box_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/padding_16"
                    android:cursorVisible="false"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:textIsSelectable="false"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

                <!--<com.w3engineers.unicef.util.lib.boxpassword.BoxPassword
                    android:id="@+id/edit_text_box_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:cursorVisible="false"
                    android:focusable="true"
                    android:gravity="center"
                    android:maxLength="8"
                    android:textColor="@color/new_user_button_color"
                    android:textIsSelectable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/text_view_title"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_title" />-->

                <TextView
                    android:id="@+id/text_view_show_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8"
                    android:text="@string/show_password"
                    android:textColor="@color/new_user_button_color"
                    android:textSize="@dimen/text_size_12"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="@+id/edit_text_box_password"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_box_password" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/instruction_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    app:cardBackgroundColor="@color/instruction_background"
                    app:layout_constraintEnd_toEndOf="@+id/edit_text_box_password"
                    app:layout_constraintStart_toStartOf="@+id/edit_text_box_password"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_show_password">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_12"
                        android:text="@string/pin_instruction"
                        android:textColor="@color/background_color"
                        android:textSize="@dimen/text_size_14" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/button_next"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_40"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="0dp"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@color/new_user_button_color"
                    android:background="@drawable/ractangular_white"
                    app:layout_constraintEnd_toEndOf="@+id/instruction_container"
                    app:layout_constraintTop_toBottomOf="@+id/instruction_container" />

                <TextView
                    android:id="@+id/button_skip"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_40"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="0dp"
                    android:gravity="center"
                    android:text="@string/skip"
                    android:textAllCaps="false"
                    android:textColor="@color/skip_text_color"
                    android:textSize="@dimen/text_size_14"
                    android:visibility="visible"
                    app:bb_drawable="@null"
                    app:layout_constraintEnd_toEndOf="@+id/button_next"
                    app:layout_constraintStart_toStartOf="@+id/button_next"
                    app:layout_constraintTop_toBottomOf="@+id/button_next" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>