<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity"
    tools:ignore="DuplicateIds, DuplicateIncludedIds">

    <data>

        <import type="com.w3engineers.unicef.telemesh.R" />

        <variable
            name="settingsVM"
            type="com.w3engineers.unicef.telemesh.ui.settings.SettingsViewModel" />

    </data>

    <ScrollView
        android:id="@+id/layout_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_view_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <include
                    layout="@layout/item_settings_default"
                    app:isShowSeparator="@{true}"
                    app:itemName="@{@string/settings_view_profile}"
                    app:rawImage="@{R.mipmap.ic_user_cyan}" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_notification_sound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_view_profile">

                <include
                    layout="@layout/item_settings_notification"
                    app:isShowSeparator="@{true}"
                    app:itemName="@{@string/settings_notification_sound}"
                    app:rawImage="@{R.mipmap.ic_bell_cyan}"
                    app:settingsVM="@{settingsVM}"/>


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_choose_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_notification_sound">

                <include
                    layout="@layout/item_settings_language"
                    app:isShowSeparator="@{true}"
                    app:itemName="@{@string/settings_choose_language}"
                    app:rawImage="@{R.mipmap.ic_globe_cyan}"
                    app:language="@{settingsVM.getAppLanguage()}"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_share_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_choose_language">

                <include
                    layout="@layout/item_settings_default"
                    app:isShowSeparator="@{true}"
                    app:itemName="@{@string/settings_share_app}"
                    app:rawImage="@{R.mipmap.ic_share_cyan}" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_open_wallet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_share_app">

                <include
                    layout="@layout/item_settings_default"
                    app:isShowSeparator="@{true}"
                    app:itemName="@{@string/settings_open_wallet}"
                    app:rawImage="@{R.mipmap.ic_wallet}" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_about_us"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_open_wallet">

                <include
                    layout="@layout/item_settings_default"
                    app:isShowSeparator="@{true}"
                    app:itemName="@{@string/settings_about_us}"
                    app:rawImage="@{R.mipmap.ic_about_cyan}" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_privacy_policy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_about_us">

                <include
                    layout="@layout/item_settings_default"
                    app:isShowSeparator="@{false}"
                    app:itemName="@{@string/settings_privacy_policy}"
                    app:rawImage="@{R.mipmap.ic_policy_cyan}" />

            </android.support.constraint.ConstraintLayout>


        </android.support.constraint.ConstraintLayout>


    </ScrollView>

</layout>



